add updated index file

--- a/Test/index.html
+++ b/Test/index.html
@@ -13,11 +13,7 @@
       <a href="/tripartite structures abound in aline/">TRIPARTITE STRUCTURES ABOUND IN ALINA</a>
       <a href="/reviews/">REVIEWS</a>
    </nav>
-   <div class="section section1">
-      <div id="hero">
-         <h1><span>ARVO</span></h1>
-      </div>
-   </div>
+   <div class="section section1"></div>
    <div class="subsection"></div>
    <div class="section section2"></div>
    <div class="subsection"></div>
