--- a/index.html
+++ b/index.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
    <meta charset="utf-8">
-   <title></title>
-   <link href="css/base.css" rel="stylesheet">
-   <link href="css/main.css" rel="stylesheet">
+   <title>Arvo Pärt: Alina</title>
+<!--    <link rel="author" href="humans.txt"> -->
+   <link rel="stylesheet" href="css/style.css" type="text/css">
+   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
+
+<div id="container">
+
+   <div class="hero">
+      <section class="hero container">
+         <div id="album title">
+         <h1><  ALINA  ></h1>
+         <h2>by Arvo Pärt</h2>
+
+         <div id="quote">
+            <h3>“I could compare my music to white light which contains all colours. Only a prism can divide the colours and make them appear; this prism could be the spirit of the listener.”</h3>
+         </div>
+
+         <div id="know-more">
+            <a href="#album">Know More</a>
+         </div>
+      </section>
+   </div>
+
+   <div id="album">
+      <div class="transparent-background-container">
+         <div class="song" class="1.-5.">
+                  <ol class="no bullets">
+                     <section class="description"><a href="https://www.youtube.com/watch?v=-5M6U2vyYH0" target="_blank"><li><strong>1. Spiegel im Spiegel, 10:36</strong></a></li>
+                     </section>
+                     <li>Vladimir Spivakov, violin</li>
+                     <li>Sergej Bezrodny, piano</li>
+                  </ol>
+         </div>
+
+         <div class="song" class="2.-5.">
+                  <ol class="no bullets">
+                     <section class="description"><a href="https://www.youtube.com/watch?v=YxbZQEqhWKI" target="_blank"><li><strong>2. Für Alina, 10:47</strong></a></li>
+                     </section>
+                     <li>Vladimir Spivakov, violin</li>
+                     <li>Alexander Malter, piano</li>
+                  </ol>
+         </div>
+
+         <div class="song" class="3.-5.">
+                  <ol class="no bullets">
+                     <section class="description"><a href="https://www.youtube.com/watch?v=-5M6U2vyYH0" target="_blank"><li><strong>3. Spiegel im Spiegel, 9:12</strong></a></li>
+                     </section>
+                     <li>Dietmar Schwalke, violoncello</li>
+                     <li>Alexander Malter, piano</li>
+                  </ol>
+             </section>
+         </div>
+
+         <div class="song" class="4.-5.">
+                  <ol class="no bullets">
+                     <section class="description"><a href="https://www.youtube.com/watch?v=YxbZQEqhWKI" target="_blank"><li><strong>4. Für Alina, 10:53</strong></a></li>
+                     </section>
+                     <li>Alexander Malter, piano</li>
+                  </ol>
+             </section>
+         </div>
+
+         <div class="song" class="5.-5.">
+                  <ol class="no bullets">
+                     <section class="description"><a href="https://www.youtube.com/watch?v=-5M6U2vyYH0" target="_blank"><li><strong>5. Spiegel im Spiegel, 9:48</strong></a></li>
+                     </section>
+                     <li>Vladimir Spivakov, violin</li>
+                     <li>Sergej Bezrodny, piano</li>
+                  </ol>
+         </div>
+      </div>
+   </div>
+
+      <section class="content">
+         <h4><  ALL MUSIC  ></h4>
+            <p>
+               Arvo Pärt is a living national treasure to Estonia, and this album reveals such intimate access to his faith, sadness, and humility. Structured in five parts, Alina is a simple, chilling invocation of heartfelt desire comprised of only two movements that alternate with subtle variation. The opening lullaby of “Spiegel im Spiegel” is a gentle and melancholy embrace between Sergej Bezrodney on piano and Vladimir Spivakov on violin, where every note steps gracefully forward, as if ascending a fragile staircase.
+            </p>
+      </section>
+
+      <section class="content">
+         <h5><  TRIPARTITE STRUCTURES ABOUND IN ALINA  ></h5>
+            <p>
+               First, they form the guiding principle of Pärt’s musical ideology, which embraces the triad as alpha and omega. It is no coincidence, then, that the album’s title piece marked the inauguration of his “tintinnabuli style,” which has since been his calling card, as it were, in a genre-hungry marketplace. Originally a two-minute piece, its extended treatment here peels away layers of possibility residing in the score. Recorded in the presence of the composer, each repetition seeks its own segue into silence. Second, the tracks are symmetrically ordered:
+            </p>
+               <ol class="track list">
+                  <li><strong>Spiegel im Spiegel (violin and piano)</strong></li>
+                  <li><strong>Für Alina (solo piano)</strong></li>
+                  <li><strong>Spiegel im Spiegel (cello and piano)</strong></li>
+                  <li><strong>Für Alina (solo piano)</strong></li>
+                  <li><strong>Spiegel im Spiegel (violin and piano)</strong></li>
+               </ol>
+            </p>
+            <p>
+               This rigidity ensures that any complex posturing is shunned in favor of direct communion. Despite their sparse instrumentation, the three versions of Spiegel im Spiegel comprise Pärt’s most spacious statement ever committed to disc. Each is like an edge of his metaphorical prism, bending light into hues that one can almost taste in the listening. One might easily criticize this approach as a halfhearted attempt to fill a disc were it not for the profound indeterminacy throughout. It is in this sense that the cello in the central incarnation sighs like an exhausted organ sending its final pulses straight into the heart of a period passed in quiet humility. Third, the album is situated at the intersection of three planes of existence: the spatial, the bodily, and the vibrational. The piano’s own resonant interior speaks precisely of its external effect, thereby establishing a striking continuity between the details of its construction and the boundless receptacle that is the listener’s mind. The music speaks, because it knows no other way of communicating. It is the voice that whispers at the edge of sleep, that ever so slightly indecipherable instinct at the heart of selfless wishes. As I listen to this album again, the patter of raindrops outside my window provides a fitting backdrop to the sheer grace of its first arpeggios. This weather lends the music a liquid shield around every note, turning each into an earthbound droplet. Alina is filled with more emptiness than substance, all the while forming through that emptiness a substance far greater than its own vocabulary can express. It enacts a unique sort of transfiguration which, through the quietude of its own coalescence, ends up turning into itself.
+            </p>
+      </section>
+
+      <section class="content">
+         <h6><  REVIEWS  ></h6>
+            <p>
+               First, they form the guiding principle of Pärt’s musical ideology, which embraces the triad as alpha and omega. It is no coincidence, then, that the album’s title piece marked the inauguration of his “Tintinnabuli style,” which has since been his calling card, as it were, in a genre-hungry marketplace. Originally a two-minute piece, its extended treatment here peels away layers of possibility residing in the score. Recorded in the presence of the composer, each repetition seeks its own segue into silence.
+            </p>
+         <h7><  ECM  ></h7>
+      </section>
+</div>
+
+<footer align="center">
+<strong>© RISD Summer 2017</strong>  |  Web Design  |  Smriti Krishnan
+</footer>
+
 </body>
 </html>
