--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="utf-8">
    <title>Arvo Pärt: Alina</title>
 <!--    <link rel="author" href="humans.txt"> -->
-   <link rel="stylesheet" href="css/style.css" type="text/css">
+   <link rel="stylesheet" href="css/main.css" type="text/css">
    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 </head>
