--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                First, they form the guiding principle of Pärt’s musical ideology, which embraces the triad as alpha and omega. It is no coincidence, then, that the album’s title piece marked the inauguration of his “tintinnabuli style,” which has since been his calling card, as it were, in a genre-hungry marketplace. Originally a two-minute piece, its extended treatment here peels away layers of possibility residing in the score. Recorded in the presence of the composer, each repetition seeks its own segue into silence. Second, the tracks are symmetrically ordered:
             </p>
                <ol class="track list">
-                  <li><strong>Spiegel im Spiegel (violin and piano)</strong></li>
+                  <li><strong>Spiegel im Spiegel (violin and piano)</li>
                   <li><strong>Für Alina (solo piano)</strong></li>
                   <li><strong>Spiegel im Spiegel (cello and piano)</strong></li>
                   <li><strong>Für Alina (solo piano)</strong></li>
